--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "analyze": "node scripts/build.js --analyze"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -114,5 +115,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "webpack-bundle-analyzer": "^3.4.1"
   }
 }
